Cacti CHANGELOG

1.1.34
-issue#1256: Error reporting of custom errors now display correctly
-issue#1257: Boost no longer ignores logging levels when updating single local data id's
-issue#1258: cacti.sql does not appear to be up to date for all tables
-issue#1260: Tabs should now display correctly in classic mode when TrueType is not available
-issue#1261: Automatic logout should not fire when using Web Basic Authentication
-issue#1263: Create utility to audit the Cacti schema for issues
-issue#1266: Correct graphWrapper usage so all graphs are correctly displayed
-issue#1268: Regex filters will now correctly filter
-issue#1274: Host CPU script checks value prescence to prevent unnecessary errors
-issue#1275: Fix issues with authPriv not supplying username/password
-issue#1289: Change Script Server to output parameters as returned by parseArgs()
-issue#1293: Correctly identify if command 'snmpbulkwalk' is available
-issue: When a checkbox table has no rows, the checkbox is resizable
-feature: CLog now has links and names for Poller, Data Query and Data Sources
-feature: CLog now displays datasource link next to RRD files which is useful for missing RRD's
-feature: CLog now uses a more dynamic functionality to query regex to allow plugin addition in future
-feature: CLog now lists filenames in reverse order to be more intuitive

1.1.33
-issue#1253: Automatically generated RRDtool DEF names in Cacti 1.1.32 break existing Graph Templates

1.1.32
-issue#969: Undefined index: color_id / task_item when viewing graphs
-issue#1166: Fix typo of 'locale' in global_languages.php
-issue#1222: Graphs with large number of items causes RRDTool to error
-issue#1230: PHP Fatal error: Call to undefined function get_max_tree_sequence()
-issue#1238: SNMP functions fail to handle "Invalid object identifier" error
-issue#1239: Browser console error in layout.js
-issue#1240: Page layout issues caused by library update
-issue#1246: Make SNMP Error return more info